# llm-manager

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark_agent_stress_test.py  benchmark_comprehensive.py  llm_manager.yaml  llm_server_manager.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: quality.yml
examples/: 01_basic_generation.py  01_basic_usage.py  02_chat_completion.py  02_openai_server.py  03_agents_autogen.py  03_openai_server.py  04_agents_langchain.py  04_streaming_generation.py  05_async_generation.py  05_chat_history.py  06_batch_generation.py  06_batch_processing.py  07_embeddings.py  07_metrics_monitoring.py  08_advanced_config.py  08_model_switching.py  09_tool_calling.py  09_worker_pools.py  10_complete_agent_workflow.py  10_subprocess_mode.py  11_concurrent_http.py  12_model_comparison.py  README.md  basic.py  interactive_chat.py  real_demo.py  run_all_examples.py
llm_manager/: __init__.py  __main__.py  cache.py  cli.py  config.py  context.py  core.py  estimation.py  exceptions.py  history.py  metrics.py  models.py  pool.py  scanner.py  tool_parser.py  utils.py  workers.py
llm_manager/scanner/: __init__.py  __main__.py  constants.py  core.py  detector.py  metadata.py  reader.py  tester.py  types.py
llm_manager/schemas/: __init__.py  openai.py
llm_manager/server/: __init__.py  app.py  dependencies.py  rate_limiter.py  request_queue.py
llm_manager/server/routes/: __init__.py  chat.py  completions.py  health.py  metrics.py  models.py
models/: models.json
tests/: __init__.py  conftest.py  test_cache.py  test_chat_endpoint.py  test_cli.py  test_config_extended.py  test_config_new.py  test_context.py  test_core.py  test_core_agent_features.py  test_estimation.py  test_exceptions.py  test_history.py  test_metrics.py  test_metrics_endpoint.py  test_models.py  test_pool.py  test_rate_limiter.py  test_scanner.py  test_scanner_full.py  test_security_features.py  test_server.py  test_server_app.py  test_server_extended.py  test_tool_parser.py  test_utils.py  test_workers.py
