[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-manager"
version = "5.0.0"
authors = [
  { name="a-issaoui" },
]
description = "Production-grade LLM management system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "llama-cpp-python>=0.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
agents = ["openai>=1.0.0", "pyautogen>=0.2.0", "langchain>=0.1.0", "langchain-openai>=0.0.5"]
dev = ["pytest>=7.4.0", "pytest-asyncio", "pytest-timeout", "pytest-cov", "mypy", "ruff", "bandit", "radon", "types-PyYAML"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "llama_cpp.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff specific
    "B",   # bugbear
]
ignore = [
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "B008",    # Do not perforn function call in argument defaults (fastapi Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR", "S101", "PLC0415", "F841", "B007", "B017", "RUF059", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async",
]
asyncio_mode = "auto"
